Preloaded cost of free for the storage location in the sample data